--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                   </div>
                   <div class="caption d-flex justify-content-between align-items-center mb-2 px-md-4 px-2">
                     <h4 class="title">Pathfinding Algorithms Visualizer</h4>
-                    <a href="https://carina-eye-care.vercel.app/" class="image-format bg-orange" target="_blank">Visit</a>
+                    <a href="https://github.com/Duc-V/Pathfinding-Algorithms-Visualizer" class="image-format bg-orange" target="_blank">Visit</a>
                   </div>
                   <div class="px-md-4 px-2">
                     <p>This mini project helped me to understand Djikstra and Astar algorithms at a deeper level, these algorithms are the foundation for google maps.
